# backend/api/endpoints_districts.go
@@ -7,28 +7,14 @@ import (
 	pb "github.com/znacol/camping/backend/proto"
 )
 
-// GetDistrict retrieves a district given an id
-func (s *API) GetDistrict(ctx context.Context, request *pb.GetDistrictRequest) (*pb.GetDistrictResponse, error) {
-	district, err := s.dbClient.GetDistrict(ctx, request.Id)
-	if err != nil {
-		return nil, errors.Wrap(err, "fetching district")
-	}
-
-	response := &pb.GetDistrictResponse{
-		District: district,
-	}
-
-	return response, nil
-}
-
-// GetAllDistricts retrieves all districts
-func (s *API) GetAllDistricts(ctx context.Context, request *pb.GetAllDistrictsRequest) (*pb.GetAllDistrictsResponse, error) {
-	districts, err := s.dbClient.GetAllDistricts(ctx)
+// GetAllDistricts retrieves all districts or one by ID
+func (s *API) DistrictsGet(ctx context.Context, request *pb.DistrictsGetRequest) (*pb.DistrictsGetResponse, error) {
+	districts, err := s.dbClient.DistrictsGet(ctx, request.Id)
 	if err != nil {
 		return nil, errors.Wrap(err, "fetching districts")
 	}
 
-	response := &pb.GetAllDistrictsResponse{
+	response := &pb.DistrictsGetResponse{
 		Districts: districts,
 	}
 
